# GeoGuardGS

./: .gitignore  CITATION.cff  LICENSE  README.md  environment.yml  pyproject.toml  requirements.txt
configs/base/: geoguardgs_base.yaml
configs/experiments/: a100_baseline_streetgs.yaml  a100_da3_only.yaml  a100_da3_periodic_group_softpatch.yaml  a100_da3_periodic_group_softpatch_opacity_decay.yaml  a100_da3_periodic_group_softpatch_opacity_reg.yaml  a100_hybrid_reference.yaml  (+3 more)
docs/: README.md  code_audit_report.md  current_formal_experiment_scheme.md  data_and_weights.md  eval_cost_and_pure_vision_design.md  evaluation_protocol_audit.md  experiment_matrix_audit.md  experiment_plan.md  geometry_consistency_eval_protocol_zh.md  method.md  output_specification.md  paper_draft_geo_guard_gs.md  paper_nature_style_review_zh.md  project_overview.md  references.md  safety_gates.md  server_a100_experiment_guide.md
geoguardgs/: __init__.py
scripts/: README.md  build_geo_guard_gs_chinese_ppt.py  build_paper_evidence_pack.py  build_paper_result_visuals.py  build_paper_training_gallery.py  check_closed_loop_config.py  check_colmap_environment.py  check_imports.py  collect_experiment_outputs.py  evaluate.py  evaluate_geometry_consistency.py  evaluate_geometry_metrics.py  final_evaluate_experiments.py  install_server_extensions.sh  launch_a100_experiments.py  recover_training_curves_from_logs.py  render.py  render_periodic_panels.py  test_depth_visualization.py  train.py  validate_no_lidar_leakage.py  validate_repair_safety.py  verify_migration_package.py
(+52 files in other folders)
